# ai-movie

./: .env.example  .gitignore  .gitignore.tmp  CLAUDE.md  Information.md  README.md  docker-compose.yml  middleware.ts  package.json  playwright.config.ts  pnpm-lock.yaml  prd.md  proxy.ts
.claude/: index.json  settings.local.json
app/: globals.css  layout.tsx
backend/: .coverage  CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_storage_migration.py  002_add_media_urls_and_task_tracking.py  e8bf1bffa176_add_bgm_tracks_table.py
backend/app/: main.py
backend/app/api/: ai_configs.py  auth.py  bgm.py  photos.py  projects.py  router.py  scripts.py  video_tasks.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/models/: __init__.py  bgm.py  photo.py  project.py  script.py  user.py  user_ai_config.py  video_task.py
backend/app/schemas/: ai_config.py  auth.py  bgm.py  photo.py  project.py  script.py  video_task.py
backend/app/services/: llm.py  seed_templates.py  storage.py
backend/app/tasks/: __init__.py  video.py
backend/scripts/: backfill_storage_keys.py
backend/tests/: conftest.py  test_auth.py
frontend/: CLAUDE.md  Dockerfile  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
hooks/: useTaskProgress.ts
lib/: auth.ts  button-variants.ts  prisma.ts  queue-types.ts  queue.ts  storage.ts  wizard-steps.ts
prisma/: schema.prisma
types/: service-config.ts
worker/: config.py  consumer.py  main.py  (+1 more)
(+179 files in other folders)
